# Habits.Tracker.FastAPI

./: .gitignore  Readme.md  docker-compose.yml  pyproject.toml
src/: main.py  utils.py
src/auth/: database.py  routers.py  schemas.py  user_manager.py
src/config/: __init__.py  config.py
src/repositories/: __init__.py  config.py  db_helper.py  models.py
src/repositories/crud/: crud.py  habit.py  user.py
src/repositories/models/: habit.py  user.py
src/routers/: habit.py  user.py
src/routings/: habit.py  user.py
src/schemas/: __init__.py  habit.py  user.py
src/validators/: habit.py
